--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
-        with:
-          fetch-depth: 1
+        uses: actions/checkout@v2
+      - name: Unshallow
+        run : git fetch --prune --unshallow
       - name: Setup Go
         uses: actions/setup-go@v1
         with:
