--- a/data/holidays.yml
+++ b/data/holidays.yml
@@ -1,6 +1,7 @@
 # https://github.com/holiday-jp/holiday_jp/archive/v1.2.2.zip
 # 年末年始の休業日を追加
 # 2027年迄設定済み 移行は必要に応じてメンテ
+# 2021年7月9日 オリンピック対応を実施
 ---
 1970-01-01: 元日
 1970-01-15: 成人の日
