--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,9 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.16
+          go-version: 1.15
+      - name: Get dependencies
+         run: go get -v -t -d ./...
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2 
         with:
