--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with: fetch-depth:0
       - name: Unshallow
         run : git fetch --prune --unshallow
       - name: Setup Go
