--- a/.github/workflows/gorelease.yml
+++ b/.github/workflows/gorelease.yml
@@ -35,14 +35,14 @@ jobs:
       - id: create-release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: $｛｛ secrets.GITHUB_TOKEN ｝｝
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: $｛｛ github.ref ｝｝
-          release_name: Release $｛｛ github.ref ｝｝
+          tag_name: ${{github.ref}}
+          release_name: Release ${{github.ref}}
           draft: false
           prerelease: true
       - run: |
-          echo '$｛｛ steps.create-release.outputs.upload_url ｝｝' > release_upload_url.txt
+          echo '${{steps.create-release.outputs.upload_url}}' > release_upload_url.txt
       - uses: actions/upload-artifact@v1
         with:
           name: create-release
@@ -66,12 +66,12 @@ jobs:
           echo "::set-output name=url::$(cat create-release/release_upload_url.txt)"
       - uses: actions/download-artifact@v1
         with:
-          name: build-$｛｛ matrix.target ｝｝
+          name: build-${{matrix.target}}
       - uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: $｛｛ secrets.GITHUB_TOKEN ｝｝
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: $｛｛ steps.upload-url.outputs.url ｝｝
-          asset_path: ./build-$｛｛ matrix.target ｝｝/rc-$｛｛ matrix.target ｝｝.zip
-          asset_name: rc-$｛｛ matrix.target ｝｝.zip
+          upload_url: ${{steps.upload-url.outputs.url}}
+          asset_path: ./build-${{matrix.target}}/rc-${{matrix.target}}.zip
+          asset_name: rc-${{matrix.target}}.zip
           asset_content_type: application/zip
