--- a/.github/workflows/gorelease.yml
+++ b/.github/workflows/gorelease.yml
@@ -51,10 +51,7 @@ jobs:
   upload-release:
     strategy:
       matrix:
-        target:
-          - x86_64-unknown-linux-musl
-          # - x86_64-pc-windows-msvc
-          # - x86_64-apple-darwin
+        os: [ubuntu-latest, macos-latest, windows-latest]
     needs: [create-release]
     runs-on: ubuntu-latest
     steps:
