--- a/data/holidays.yml
+++ b/data/holidays.yml
@@ -826,9 +826,10 @@
 2021-12-30: 非稼働日
 2021-12-31: 非稼働日
 2022-01-01: 元日
-2021-01-02: 非稼働日
-2021-01-03: 非稼働日
-2021-01-04: 非稼働日
+2022-01-02: 非稼働日
+2022-01-03: 非稼働日
+2022-01-04: 非稼働日
+2022-01-06: 非稼働日です
 2022-01-10: 成人の日
 2022-02-11: 建国記念の日
 2022-02-23: 天皇誕生日
